# zizou

./: 404.html  Dockerfile  HOW_TO_RELEASE.md  HOW_TO_SETUP_DEV.md  README.md  environment.yml  fix-permissions  index.html  mkdocs.yml  objects.inv  pyproject.toml
.devcontainer/: devcontainer.json
anomaly_detection/: index.html
api/: index.html
docs/: about.md  anomaly_detection.ipynb  api.md  geomagnetic_data.ipynb  index.md  spectrogram.ipynb  user_guide.ipynb  user_guide.md
examples/: AutoEncode.ipynb  Compute_Feature.ipynb  CreateDummyDataset.ipynb  geomagnetic_data.ipynb
geomagnetic_data/: index.html
sandbox/: index.html
spectrogram/: index.html
src/zizou/: __init__.py  anomaly_base.py  autoencoder.py  cpxtrace.py  data.py  dsar.py  feature_base.py  pca.py  rsam.py  spectral_features.py  ssam.py  util.py  visualise.py  zizou_logging.py
src/zizou/package_data/: config.yml  index.html
tests/: conftest.py  test_anomaly_base.py  test_autoencoder.py  test_baseclass.py  test_cmplx_features.py  test_data.py  test_docstrings.py  test_dsar.py  test_pca.py  test_rsam.py  test_spectral_features.py  test_ssam.py  test_util.py
tests/data/: MDR.xml  WIZ_centroid.csv  WIZ_instband.csv  WIZ_instfreq.csv  WIZ_norm_env.csv  dsar_test.csv  pca_transform_test.csv  rsam_bp_test.csv  rsam_energy_test.csv  window_centroid_test.csv
user_guide/: index.html
