[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zizou"
version = "0.1.3"
authors = [
    {name = "Yannik Behr", email = "y.behr@gns.cri.nz"},
    {name = "Christof Mueller", email = "c.mueller@gns.cri.nz"},
]
description = "Python package to detect anomalies in geoscience time series data"
license = {text = "GPL v3"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "boto3",
    "pandas",
    "numpy",
    "scipy",
    "obspy",
    "tqdm",
    "xarray[io]",
    "pyyaml",
    "tonik"
]

[project.optional-dependencies]
ml = ["scikit-learn", "torch", "torchvision", "torchaudio", "scikit-fuzzy"]

[project.urls]
Homepage = "https://tsc-tools.github.io/zizou/"
Issues = "https://github.com/tsc-tools/zizou/issues"

[tool.setuptools.packages.find]
where = ["src", "tests"]

[tool.setuptools.package-data]
zizou = ["data/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true

[tool.ruff.lint]
unfixable = ["F401"]
